# webauthn-project

./: .gitignore  README.md
.github/workflows/: keycloak.yml
backend-app/app/: .air.conf  go.mod  go.sum  gqlgen.yml  main
backend-app/app/src/: main.go
backend-app/docker/: backend-app.dev..dockerfile
bff-auth/app/: Cargo.toml
bff-auth/app/src/: cognito.rs  common.rs  data.rs  lib.rs  main.rs  reverse_proxy.rs
bff-auth/app/src/cognito/: controller.rs  model.rs  service.rs
bff-auth/app/src/common/: model.rs  service.rs  util.rs
bff-auth/app/src/config/: envconfig.rs
bff-auth/app/src/data/: connection.rs  entity.rs  repository.rs
bff-auth/app/src/keycloak/: controller.rs  model.rs  service.rs
bff-auth/app/src/keycloak/interface/: service.rs
bff-auth/docker/: bff.dev.dockerfile
bff-auth/docker/.aws/: credentials
bff-reverse-proxy/app/: Cargo.toml
bff/docker/: bff.release.dockerfile
istio/: README.md
istio/canary-deployment/: 01_productpage-v2.yaml  02_productpage-destinationrule.yaml  03_productpage-virtualservice.yaml
istio/service-authorization/: 01_authentication.yaml  02_destinationrule.yaml  03_authorizationpolicy.yaml
istio/setup/: 02_istio-demo.yaml  04_bookinfo-gateway.yaml
istio/visualization-kiali/: 01_gateway.yaml  02_virtualservice.yaml
istio/voting-app/: vote.yaml
keycloak/docker/: keycloak.dockerfile  standalone-ha.xml  standalone.xml
kubernetes/: application-manifest.yaml
vue.js/site/: .firebaserc  README.md  apollo.config.js  gulpfile.js  package-lock.json  package.json  tsconfig.json  vue.config.js
(+120 files in other folders)
