[package]
name = "app"
version = "0.1.0"
authors = ["bff"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web =  {version = "3.3.2", features = ["openssl"]}
actix-rt = "1.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = {version = "0.7.3"}
rand_chacha = "*"
actix-identity = "0.3.1"
rusoto_core = "0.45.0"
rusoto_dynamodb = "0.45.0"
serde_dynamodb = "0.6.0"
openssl = { version = "0.10", features = ["vendored"] }
envconfig = "0.9.1"
envconfig_derive = "0.9.1"
time = "0.2.23"
base64-url = "1.4.8"
rustc-serialize = "0.3.24"
rust-crypto = "0.2.36"
once_cell = "1.5.2"
async-trait = "0.1.42"
env_logger = "0.8.2"
log = "0.4.13"